@@ -86,20 +86,24 @@ our %mnemonic = (
 
 # TAP severity level definition:
 #
-# |--------+-------+----------+--------------+----------+------------+----------|
-# | *type* | is_ok | has_todo | is_actual_ok | has_skip | *mnemonic* | *tapcon* |
-# |--------+-------+----------+--------------+----------+------------+----------|
-# | plan   | undef |    undef |        undef |        1 | ok_skip    |        3 |
-# |--------+-------+----------+--------------+----------+------------+----------|
-# | test   |     1 |        0 |            0 |        0 | ok         |        1 |
-# | test   |     1 |        1 |            1 |        0 | ok_todo    |        2 |
-# | test   |     1 |        0 |            0 |        1 | ok_skip    |        3 |
-# | test   |     1 |        1 |            0 |        0 | notok_todo |        4 |
-# | test   |     0 |        0 |            0 |        0 | notok      |        5 |
-# | test   |     0 |        0 |            0 |        1 | notok_skip |        6 |
-# |--------+-------+----------+--------------+----------+------------+----------|
-# |        |       |          |              |          | missing    |        0 |
-# |--------+-------+----------+--------------+----------+------------+----------|
+# |--------+---------------+----------+--------------+----------+------------+----------|
+# | *type* |         is_ok | has_todo | is_actual_ok | has_skip | *mnemonic* | *tapcon* |
+# |--------+---------------+----------+--------------+----------+------------+----------|
+# | plan   |         undef |    undef |        undef |        1 | ok_skip    |        3 |
+# |--------+---------------+----------+--------------+----------+------------+----------|
+# | test   |             1 |        0 |            0 |        0 | ok         |        1 |
+# | test   |             1 |        1 |            1 |        0 | ok_todo    |        2 |
+# | test   |             1 |        0 |            0 |        1 | ok_skip    |        3 |
+# | test   |             1 |        1 |            0 |        0 | notok_todo |        4 |
+# | test   |             0 |        0 |            0 |        0 | notok      |        5 |
+# | test   |             0 |        0 |            0 |        1 | notok_skip |        6 |
+# |--------+---------------+----------+--------------+----------+------------+----------|
+# |        |               |          |              |          | missing    |        0 |
+# |--------+---------------+----------+--------------+----------+------------+----------|
+# | *type* |       *value* |          |              |          |            |          |
+# |--------+---------------+----------+--------------+----------+------------+----------|
+# | pragma | +tapdom_error |          |              |          | notok      |        5 |
+# |--------+---------------+----------+--------------+----------+------------+----------|
 
 our $severity = {};
 #
@@ -338,7 +342,7 @@ sub new {
                         # 'kv_data' under their parent line.
                         # That line should be a test or a plan line, so that its
                         # place (or "data path") is structurally always the same.
-                        if ($lines[-1]->is_test or $lines[-1]->is_plan) {
+                        if ($lines[-1]->is_test or $lines[-1]->is_plan or $lines[-1]->is_pragma) {
                             $lines[-1]->{kv_data}{$key} = $value;
                         } else {
                             if (!$plan) {
@@ -362,6 +366,10 @@ sub new {
                     ->{$entry->{has_todo}}
                     ->{$entry->{is_actual_ok}}
                     ->{$entry->{has_skip}};
+                }
+                if ($entry->{is_pragma}) {
+                  no warnings 'uninitialized';
+                  $entry->{severity} = $entry->{raw} =~ /^pragma\s+\+tapdom_error\s*$/ ? 5 : 0;
                 }
                 $entry->{severity} = 0 if not defined $entry->{severity};
 
@@ -1160,7 +1168,10 @@ structure looks like this:
 
 =head2 version
 
-=head1 ATTRIBUTES
+=head1 ADDITIONAL ATTRIBUTES
+
+TAP::DOM creates attributes beyond those from TAP::Parser, usually to
+simplify later processing.
 
 =head2 severity
 
@@ -1168,7 +1179,7 @@ The C<severity> describes the combination of C<ok>/C<not ok> and
 C<todo>/C<skip> directives as one single numeric value.
 
 This allows to handle the otherwise I<nominal> values as I<ordinal>
-value, i.e., with a particular order.
+value, i.e., it provides them with a particular order.
 
 This order is explained as this:
 
@@ -1184,7 +1195,7 @@ and TODO).
 
 =item * 2 - ok with a C<#TODO>
 
-That's slightly worse than a straight ok because of the directive
+That's slightly worse than a straight ok because of the directive.
 
 =item * 3 - ok with a C<#SKIP>
 
@@ -1193,16 +1204,54 @@ execution, as that's what skip means.
 
 =item * 4 - not_ok with a C<#TODO>
 
-That's worse as it represets a fail but it's a known issue.
+That's worse as it represents a fail but it's a known issue.
 
 =item * 5 - straight not_ok.
 
-A straight fail as the worst real-world value.
+A straight fail is the worst real-world value.
 
 =item * 6 - forbidden combination of a not_ok with a C<#SKIP>.
 
 How can it fail when it was skipped? That's why it's even worse than
 worst.
+
+=back
+
+A severity value is set for lines of type C<test> and C<plan>.
+
+Additionally, it is set on the TAP::DOM-specific pragma
+C<+tapdom_error> with a severity value 5 (i.e., I<not_ok>). Because a
+pragma doesn't interfere with C<test>/C<plan> lines you can use this
+to express an out-of-band error situation which would be lost
+otherwise. Read below for more.
+
+=head1 TAP::DOM-SPECIFIC PRAGMAS
+
+Pragmas in TAP are meant to influence the behaviour of the TAP parser.
+
+TAP::DOM recognizes special pragmas. They are all prefixed with
+C<tapdom_>.
+
+So far there is:
+
+=over 4
+
+=item * +tapdom_error - assign this line a severity of 5 (I<not ok>)
+
+You can for instance append this pragma to the TAP document during
+post-processing to express an out-of-band error situation without
+interfering with the existing test lines and plan.
+
+Typical situations can be a an error from C<prove> or other TAP
+processor, and you want to ensure this problem does not get lost when
+storing the document in a database.
+
+Pragmas allow C<kv_data> like in C<test> and C<plan> lines, so you can
+transport additional error details like this:
+
+ pragma +tapdom_error
+ # Test-tapdom-error-type: prove
+ # Test-tapdom-prove-exit: 1
 
 =back
 
